--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </div>
 
 <script>
-const OPENROUTER_API_KEY = "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"; // Replace immediately if exposed
+const OPENROUTER_API_KEY = "API"; // Replace immediately if exposed
 
 let dataURL = null;
 const fileInput = document.getElementById('fileInput');
@@ -88,3 +88,4 @@ analyzeBtn.addEventListener('click', async () => {
 </script>
 </body>
 </html>
+
